(library
  (name db_impl)
  (modules assembly compile errors exprs phases pretty runner lexer parser)
  (libraries ounit2 extlib str)
  (wrapped false))

(ocamllex (modules lexer))
(menhir (modules parser))

(executable
  (name main)
  (modules main)
  (libraries unix str db_impl))

(test
  (name test)
  (modules test)
  (libraries unix str db_impl))

(env (dev (flags (:standard -warn-error -A))))
